--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "homepage": "https://3rnestocs.github.io/banco",
   "version": "0.1.0",
   "private": false,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@mui/x-date-pickers": "^7.19.0",
+    "@reduxjs/toolkit": "^2.3.0",
+    "axios": "^1.7.8",
     "dayjs": "^1.11.13",
     "gh-pages": "^6.1.1",
+    "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1"
   },
